/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.2/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building a CLI application.
    id 'application'
}

group = 'qbittorent.exporter'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.14.1'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.1'

    implementation 'io.undertow:undertow-core:2.2.12.Final'
    implementation 'io.undertow:undertow-servlet:2.2.12.Final'
    implementation 'com.google.code.gson:gson:2.8.8'
    implementation 'io.prometheus:simpleclient:0.12.0'
    implementation 'io.micrometer:micrometer-registry-prometheus:1.7.5'
}

test {
    useJUnitPlatform()
}

application {
    // Define the main class for the application.
    mainClassName = 'qbittorrent.exporter.Application'
}
